syntax = "proto3";

package sidecar.v1;

option go_package = "github.com/emperorhan/multichain-indexer/pkg/generated/sidecar/v1;sidecarv1";

service ChainDecoder {
  rpc DecodeSolanaTransactionBatch(DecodeSolanaTransactionBatchRequest)
      returns (DecodeSolanaTransactionBatchResponse);
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

message DecodeSolanaTransactionBatchRequest {
  repeated RawTransaction transactions = 1;
  repeated string watched_addresses = 2;
}

message RawTransaction {
  string signature = 1;
  bytes raw_json = 2;  // raw JSON from getTransaction RPC call
}

message DecodeSolanaTransactionBatchResponse {
  repeated TransactionResult results = 1;
  repeated DecodeError errors = 2;
}

message TransactionResult {
  string tx_hash = 1;
  int64 block_cursor = 2;       // slot
  int64 block_time = 3;         // unix timestamp, 0 if unavailable
  string fee_amount = 4;        // lamports as string
  string fee_payer = 5;
  string status = 6;            // "SUCCESS" or "FAILED"
  optional string error = 7;
  repeated BalanceEventInfo balance_events = 8;
}

message BalanceEventInfo {
  int32 outer_instruction_index = 1;
  int32 inner_instruction_index = 2;   // -1 = outer ix itself
  string event_category = 3;           // TRANSFER, STAKE, SWAP, MINT, BURN, REWARD, FEE
  string event_action = 4;             // spl_transfer, system_transfer, stake_delegate, ...
  string program_id = 5;
  string address = 6;                  // account whose balance changed
  string contract_address = 7;         // mint address
  string delta = 8;                    // SIGNED amount string
  string counterparty_address = 9;
  string token_symbol = 10;
  string token_name = 11;
  int32 token_decimals = 12;
  string token_type = 13;
  map<string, string> metadata = 14;   // plugin-specific data (from_ata, to_ata, etc.)
}

message DecodeError {
  string signature = 1;
  string error = 2;
}

message HealthCheckRequest {}

message HealthCheckResponse {
  string status = 1;
}
